--- a/src/components/headerNavigation/headerNavigation.styles.css
+++ b/src/components/headerNavigation/headerNavigation.styles.css
@@ -4,6 +4,7 @@
   height: 70px;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-top: 10px;
 }
 
 .header-nav-container .nav-item {
@@ -31,6 +32,7 @@
 }
 
 .nav-items-left .nav-item:not(.shopname) {
+  
   padding-top: 6px;
 }
 
@@ -40,6 +42,6 @@
 }
 
 .nav-items-right .fa-cart-plus{
-  color: green;
+  color: blueviolet;
   font-size: 35px;
 }
